# openclaw-dashboard

./: CLAUDE.md  README.md  claude-progress.txt  feature_list.json  feature_list_v2.json  init.sh  next.config.ts  package-lock.json  package.json  progress.txt  task.json  vitest.config.ts
macos-menubar/: DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  index.html  package-lock.json  package.json  setup.sh  start.sh
macos-menubar-native/: .gitignore  OpenClaw-Dashboard-1.0.0.dmg  README.md  build.sh  package-dmg-standalone.sh  package-dmg.sh  package-standalone.sh  start-dashboard.sh
macos-menubar-native/Sources/: main.swift
macos-menubar/src/: App.tsx
macos-menubar/src-tauri/: Cargo.toml  tauri.conf.json
macos-menubar/src-tauri/capabilities/: default.json
macos-menubar/src-tauri/src/: commands.rs  lib.rs  main.rs  services.rs
src/: middleware.ts
src/app/: layout.tsx  page.tsx  template.tsx
src/app/(dashboard)/: layout.tsx  page.tsx
src/app/(dashboard)/agents/: page.tsx
src/app/(dashboard)/channels/: page.tsx
src/app/(dashboard)/chat/: page.tsx
src/app/[locale]/: layout.tsx
src/components/: document-preview.tsx  error-boundary.tsx  language-switcher.tsx  theme-script.tsx
src/components/__tests__/: language-switcher.test.tsx  theme-provider.test.tsx
src/lib/: i18n.ts
src/lib/__tests__/: react-hooks.test.tsx
src/lib/openclaw/: api-client.ts  cache.ts  config-reader.ts  index.ts  react-hooks.tsx  runtime-reader.ts  subscription-reader.ts  types.ts  ws-client.ts
src/messages/: en.json  zh.json
src/test/: setup.ts
(+64 files in other folders)
