[package]
name = "openclaw-menubar"
version = "0.1.0"
description = "OpenClaw Dashboard Service Menubar Application"
authors = ["OpenClaw"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "openclaw_menubar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
tauri-plugin-log = "2"
